Change title of homepage to Indivisible Hawaii

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: IndivisibleHI
+title: Indivisible Hawaii
 position: 1
 layout: home
 excerpt: Our mission is to resist the Trump agenda by engaging our elected officials
